ncc/testsuite/positive/ext-asm.n
public class Ext
{
  static Main() : void {}
}
public class Ext['a] : Ext where 'a : Ext['a] {}
