ncc/testsuite/negative/operators1.n
class StaticPublic {
     @& (x : list [int], y : list [int]) : bool { // E: User defined operator 'StaticPublic.&' must be declared static and public
            x.Equals (y)
        }
}
